# libnccl

./: .gitmodules  COPYRIGHT.txt  Cargo.toml  build.rs
nccl_sys/: Cargo.toml  build.rs  ffi.rs
src/: ffi.rs  lib.rs
tests/: comm.rs
